Add files to test on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 .App-contents {
   background-image: url("assets/scienceintenlogo.jpg");
-  height: 1000px;
+  height: 100vmin;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -16,7 +16,7 @@
   height: 40vmin;
 }
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -25,17 +25,8 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
