--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,4 +3,10 @@
     padding-top: 2%;
     padding-bottom: 2%;
     text-align: center;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; 
 }
