add header transitions

--- a/src/App.css
+++ b/src/App.css
@@ -4,29 +4,26 @@
 
 .App-contents {
   background-image: url("assets/scienceintenlogo.jpg");
-  height: 100vmin;
+  height: 100vh;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.Selected-content {
+  z-index: 10;
+  position: absolute;
+  top: 90vh;
+  width: 100%;
+  transition: 1.5s;
 }
 
-/* .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-} */
+.at-bottom {
+  background: rgb(255,255,255);
+}
 
-.App-link {
-  color: #61dafb;
+.at-top {
+  position: absolute;
+  top: 0
 }
