--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,5 +8,9 @@
     -khtml-user-select: none; /* Konqueror HTML */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; 
+    user-select: none;
+    box-shadow: 10px 5px 5px rgba(0,0,0,0.4);
+    position: 'absolute';
+    bottom:0;
+    background: rgba(255,255,255,0.9);
 }
