--- a/src/components/SectionContent/SectionContent.css
+++ b/src/components/SectionContent/SectionContent.css
@@ -5,6 +5,8 @@
 }
 
 .ContentContainer {
-    background: rgba(255,255,255,0.7);
+    background: rgba(255,255,255,0.75);
     box-shadow: 10px 5px 5px rgba(0,0,0,0.4);
+    min-height: 100vh;
+    padding: 10vh 5vw;
 }
