--- a/src/components/HeaderNav/HeaderNav.css
+++ b/src/components/HeaderNav/HeaderNav.css
@@ -3,6 +3,10 @@
     display: flex;
     flex-direction: column;
     background-color: none;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 100;
 }
 
 .NavBtnList {
