Home screen responsive to resize, svg background, etc...

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   height: 100%;
   width: 100%;
   background-color: #F4F3EF;
+  background-image: url('https://www.transparenttextures.com/patterns/asfalt-dark.png');
 }
 
 .Selected-content {
